🐝 fixup: forgotten z-index

--- a/stylus/components/modals.styl
+++ b/stylus/components/modals.styl
@@ -11,6 +11,7 @@
 
 $modals
     modal-width = 30rem
+    z-index $modal-index
 
     .coz-modal-wrapper
         position          fixed
